--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 <th scope="col">Required&nbsp;age</th>
 <th scope="col">Additional&nbsp;information</th>
 </tr>
-<tr><td colspan="3">AnimeBytes (AB)<br>Invite forum unlocks with Power User user class: 25GB upload, 0.7 ratio, 10 torrents uploaded, 2 weeks account age.<br><br>Torrent Master user class: 500GB upload, 0.9 ratio, 100 torrents uploaded, 90 days account age.</td></tr>
+<tr><td colspan="3">AnimeBytes (AB)<br>Invite forum unlocks with Power User user class: 25GB upload, 0.7 ratio, 10 torrents uploaded, 2 weeks account age.<br><br>Torrent Master user class: 500GB upload, 0.9 ratio, 100 torrents uploaded, 90 days account age.<br>Legend user class: 1TB upload, 1.0 ratio, 500 torrents uploaded, 180 days account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>ACM</td><td>180&nbsp;days</td><td>4TB upload. 6 months account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>Aither</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>ANT</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>BBT</td><td>180&nbsp;days</td><td>6 months account age. Seeding at least half of your snatched torrents.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>CCS</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>D3</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>D3</td><td>14&nbsp;days</td><td>Torrent Master user class. 1.5 ratio. 50 Perfect FLAC torrent uploads. 1 year account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>DIC</td><td>14&nbsp;days</td><td>10 music uploads, or 15 other uploads.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>Emp</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>FF</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -90,7 +90,7 @@
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>MTV</td><td>180&nbsp;days</td><td>1.5 ratio. 6 months account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>NBL</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>OPS</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>PTP</td><td>365&nbsp;days</td><td>Torrent Master user class. 1 year account age.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>PTP</td><td>365&nbsp;days</td><td>Legend user class. 1 year account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>PxC</td><td>30&nbsp;days</td><td>1 month account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>PxHD</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>RED</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -100,9 +100,16 @@
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>U2</td><td>14&nbsp;days</td><td>Content to contribute.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>UHDB</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">Anthelion (ANT)<br>Invite forum unlocks with Power User user class: 1TB upload, 1.0 ratio, 5 torrents uploaded or 10 torrents adopted, 25000 Orbs.</td></tr>
+<tr><th scope="row">ANT<span class="arrow">-&gt;</span>NBL</td><td>14&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">ANT<span class="arrow">-&gt;</span>BLU</td><td>14&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">ANT<span class="arrow">-&gt;</span>CRT</td><td>14&nbsp;days</td><td>No data yet.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">AlphaRatio (AR)<br>Invite forum unlocks with Sphinx user class: 3.2TB upload, 1.44 million seed bonus points, no Hit and Runs, 26 weeks account age.<br><br>Satyr user class: 12TB upload, 2.4 million seed bonus points, no Hit and Runs, 60 weeks account age.<br>Adonis user class: 12TB upload, 2.0 million seed bonus points, no Hit and Runs, 60 weeks account age, 50USD or greater donation.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>BHD</td><td>182&nbsp;days</td><td>Satyr or Adonis user class.</td></tr>
+<tr><th scope="row">AR<span class="arrow">-&gt;</span>CRT</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>GGn</td><td>182&nbsp;days</td><td>Satyr or Adonis user class.</td></tr>
+<tr><th scope="row">AR<span class="arrow">-&gt;</span>iAnon</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>LzTr</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>MTV</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>OBS</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -112,9 +119,8 @@
 <tr class="spacer"></tr>
 <tr><td colspan="3">BeyondHD (BHD)<br>Invite forum unlocks with Pro user class: 1.25TB upload, 0.70 ratio, 30 days seed time, 4 years 11 months total seed time, 60 completed seeds, 500GB special seed size, 6 months account age.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>Aither</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">BHD<span class="arrow">-&gt;</span>ANT</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>ANT</td><td>180&nbsp;days</td><td>3 other tracker profiles.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>CGP</td><td>180&nbsp;days</td><td>1.0 ratio.</td></tr>
-<tr><th scope="row">BHD<span class="arrow">-&gt;</span>CRT</td><td>270&nbsp;days</td><td>2.5TB upload. 1.0 ratio. 9 months account age.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>Hone</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>MTV</td><td>180&nbsp;days</td><td>1.5 ratio.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>NBL</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -141,6 +147,20 @@
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>NBL</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>OPS</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>THD</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">BroadcasTheNet (BTN)<br>No requirement data yet.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>AB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>ACM</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>BiB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>BLU</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>GGn</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>MAM</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>OPS</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>PTN</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>PTP</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>PxHD</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>RED</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>UHDB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">Cinemageddon (CG)<br>Invite forum unlocks with Superfan user class: 200GB upload, 20GB download, 1.5 ratio.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>ANT</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -191,8 +211,9 @@
 <tr><th scope="row">FL<span class="arrow">-&gt;</span>PTer</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">GazelleGames.net (GGn)<br>Invite forum unlocks with Pro Gamer user class. All user classes are gained with achievement points.<br>Additional invite forum unlocks with Legendary Gamer user class.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>AB</td><td>90&nbsp;days</td><td>Elite Gamer user class. 3 months account age.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>AB</td><td>90&nbsp;days</td><td>Elite Gamer user class. 6 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>ANT</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>BHD</td><td>730&nbsp;days</td><td>Legendary Gamer user class. 2 years account age.<br>Thread is in the Legendary Gamer invite forum.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>CGP</td><td>90&nbsp;days</td><td>1.0 real ratio. 3 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>CCS</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>DIC</td><td>30&nbsp;days</td><td>10 music uploads, or 15 other uploads.</td></tr>
@@ -277,9 +298,11 @@
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>Aither</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>ANT</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>BdC</td><td>60&nbsp;days</td><td>2 months account age.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>BHDTV</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>BtW</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>CGP</td><td>180&nbsp;days</td><td>1TB upload. 6 months account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>DCC</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>1.5 real ratio. 1 year account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>Milkie</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>MyXZ</td><td>365&nbsp;days</td><td>1 other tracker profile with 1 year account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>NBL</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -311,7 +334,9 @@
 <tr><td colspan="3">Nebulance (NBL)<br>Invite forum unlocks with Ensign user class: 100GB upload, 100 snatches, 100000 Cubits, 4 weeks account age.<br><br>Flattop user class: 250GB upload, 250 snatches, 500000 Cubits, 8 weeks account age.</td></tr>
 <tr><th scope="row">NBL<span class="arrow">-&gt;</span>Aither</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">NBL<span class="arrow">-&gt;</span>ANT</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">NBL<span class="arrow">-&gt;</span>BBT</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">NBL<span class="arrow">-&gt;</span>BLU</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
+<tr><th scope="row">NBL<span class="arrow">-&gt;</span>CRT</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">NBL<span class="arrow">-&gt;</span>GPW</td><td>56&nbsp;days</td><td>Flattop user class.</td></tr>
 <tr><th scope="row">NBL<span class="arrow">-&gt;</span>PxC</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">NBL<span class="arrow">-&gt;</span>RFX</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -348,6 +373,7 @@
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>MTV</td><td>180&nbsp;days</td><td>1.5 ratio. 6 months account age.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>NBL</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>OpenCD</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">OPS<span class="arrow">-&gt;</span>PTP</td><td>365&nbsp;days</td><td>Torrent Master user class. 1 year account age.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>RED</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>SM</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>UHDB</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -403,6 +429,7 @@
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>FF</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>GGn</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>GPW</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>HDB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>HDT</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>HDSky</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>LzTr</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
@@ -428,11 +455,12 @@
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>AB</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>ANT</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>BBT</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>BHD</td><td>180&nbsp;days</td><td>Elite user class. 6 months account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>BHD</td><td>56&nbsp;days</td><td>Torrent Master user class, or 18 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>BLU</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>BdC</td><td>120&nbsp;days</td><td>4 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>CGP</td><td>180&nbsp;days</td><td>1.0 ratio. 6 months account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>CCC</td><td>14&nbsp;days</td><td>Other tracker profiles.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>CCS</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>CGP</td><td>180&nbsp;days</td><td>1.0 ratio. 6 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>D3</td><td>365&nbsp;days</td><td>Elite user class. 1.5 ratio. 100 Perfect FLAC torrent uploads. 1 year account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>DIC</td><td>14&nbsp;days</td><td>10 music torrent uploads.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>Emp</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
@@ -442,6 +470,7 @@
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>LB</td><td>14&nbsp;days</td><td>1 other tracker profile.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>MAM</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>MiM</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>MTV</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>NBL</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>OPS</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
