--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
 <tr><th scope="row">ANT<span class="arrow">-&gt;</span>CRT</td><td>14&nbsp;days</td><td>No data yet.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">AlphaRatio (AR)<br>Invite forum unlocks with Sphinx user class: 3.2TB upload, 1.44 million seed bonus points, no Hit and Runs, 26 weeks account age.<br><br>Satyr user class: 12TB upload, 2.4 million seed bonus points, no Hit and Runs, 60 weeks account age.<br>Adonis user class: 12TB upload, 2.0 million seed bonus points, no Hit and Runs, 60 weeks account age, 50USD or greater donation.</td></tr>
-<tr><th scope="row">AR<span class="arrow">-&gt;</span>BHD</td><td>182&nbsp;days</td><td>Satyr or Adonis user class.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>CRT</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>GGn</td><td>182&nbsp;days</td><td>Satyr or Adonis user class.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>iAnon</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -206,14 +205,13 @@
 <tr><th scope="row">FL<span class="arrow">-&gt;</span>CRT</td><td>365&nbsp;days</td><td>1.0 ratio. 1 year account age.</td></tr>
 <tr><th scope="row">FL<span class="arrow">-&gt;</span>iAnon</td><td>1460&nbsp;days</td><td>Elite user class.</td></tr>
 <tr><th scope="row">FL<span class="arrow">-&gt;</span>Milkie</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">FL<span class="arrow">-&gt;</span>NBL</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">FL<span class="arrow">-&gt;</span>NBL</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
 <tr><th scope="row">FL<span class="arrow">-&gt;</span>Portugas</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">FL<span class="arrow">-&gt;</span>PTer</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">GazelleGames.net (GGn)<br>Invite forum unlocks with Pro Gamer user class. All user classes are gained with achievement points.<br>Additional invite forum unlocks with Legendary Gamer user class.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>AB</td><td>90&nbsp;days</td><td>Elite Gamer user class. 6 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>ANT</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>BHD</td><td>730&nbsp;days</td><td>Legendary Gamer user class. 2 years account age.<br>Thread is in the Legendary Gamer invite forum.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>CGP</td><td>90&nbsp;days</td><td>1.0 real ratio. 3 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>CCS</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>DIC</td><td>30&nbsp;days</td><td>10 music uploads, or 15 other uploads.</td></tr>
@@ -278,6 +276,12 @@
 <tr><th scope="row">GPW<span class="arrow">-&gt;</span>Wintersakura</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GPW<span class="arrow">-&gt;</span>Xinglin</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">JPopsuki (JPS)<br>Invite forum is not locked.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">KamePT (KamePT)<br>Invite forum unlocks with Power User user class: 50GB download, 1.05 ratio, 4 weeks account age, 40,000 seed points.</td></tr>
+<tr><th scope="row">KamePT<span class="arrow">-&gt;</span>MDU</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">KamePT<span class="arrow">-&gt;</span>RedLeaves</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">M-Team (M-T)<br>Invite forum unlocks with Elite User user class: 400GB download, 3.0 ratio, 8 weeks account age.</td></tr>
 <tr><th scope="row">M-T<span class="arrow">-&gt;</span>2xFree</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">M-T<span class="arrow">-&gt;</span>BeiTai</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -293,32 +297,32 @@
 <tr><th scope="row">M-T<span class="arrow">-&gt;</span>LeagueHD</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">M-T<span class="arrow">-&gt;</span>THD</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">MyAnonaMouse (MAM)<br>Invite forum unlocks with Power User user class: 25GB upload, 2.0 ratio, 4 weeks account age.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>ABT</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>Aither</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>ANT</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><td colspan="3">MyAnonaMouse (MAM)<br>Invite forum unlocks with Power User user class: 25GB upload, 2.0 ratio, 4 weeks account age.<br>Some threads additionally require VIP, purchased with bonus points.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>ABT</td><td>28&nbsp;days</td><td>Other tracker profiles.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>Aither</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>BdC</td><td>60&nbsp;days</td><td>2 months account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>BHDTV</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>BtW</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>CGP</td><td>180&nbsp;days</td><td>1TB upload. 6 months account age.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>CGP</td><td>180&nbsp;days</td><td>500GB upload and 1 year account age, or 1TB upload and 6 months account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>DCC</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>Emp</td><td>180&nbsp;days</td><td>1.5 real ratio. 6 months account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>1.5 real ratio. 1 year account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>Milkie</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>MyXZ</td><td>365&nbsp;days</td><td>1 other tracker profile with 1 year account age.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>NBL</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>MiM</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>OBS</td><td>90&nbsp;days</td><td>100GB upload. 3 months account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>OPS</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>OTW</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>OTW</td><td>28&nbsp;days</td><td>1 other tracker profile.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>PxC</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>PxHD</td><td>180&nbsp;days</td><td>2 other tracker profiles. 6 months account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>SC</td><td>180&nbsp;days</td><td>50GB upload. 6 months account age.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>Shazbat</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>SM</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>TG</td><td>28&nbsp;days</td><td>2 or 3 other tracker profiles.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>TSP</td><td>60&nbsp;days</td><td>2.0 ratio. 2 months account age.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>Xspeeds</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">MoreThanTV (MTV)<br>Invite forum unlocks with Camera Operator user class: 500GB upload, 8 weeks account age.<br><br>Boom Operator user class: 1000GB upload, 10 checked uploads, 5 forum posts.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>Aither</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">MTV<span class="arrow">-&gt;</span>BHD</td><td>365&nbsp;days</td><td>Boom Operator user class. 1 year account age.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>BLU</td><td>90&nbsp;days</td><td>1.0 real ratio. 3 months account age.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>CGP</td><td>90&nbsp;days</td><td>1.0 real ratio. 3 months account age.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>CHD</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -418,7 +422,6 @@
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>AB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>AR</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>BdC</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>BHD</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>BiB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>BLU</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>CCS</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
@@ -455,7 +458,6 @@
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>AB</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>ANT</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>BBT</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>BHD</td><td>56&nbsp;days</td><td>Torrent Master user class, or 18 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>BLU</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>BdC</td><td>120&nbsp;days</td><td>4 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>CCC</td><td>14&nbsp;days</td><td>Other tracker profiles.</td></tr>
@@ -478,7 +480,7 @@
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>PTP</td><td>365&nbsp;days</td><td>Torrent Master user class. 1 year account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>PxHD</td><td>14&nbsp;days</td><td>Elite user class. 3 other tracker profile with 6 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>RTT</td><td>365&nbsp;days</td><td>2 other tracker profiles. 1 year account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>SC</td><td>14&nbsp;days</td><td>6 months account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>SC</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>SM</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>SceneHD</td><td>150&nbsp;days</td><td>5 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>TLFB</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
@@ -518,9 +520,9 @@
 <tr class="spacer"></tr>
 <tr><td colspan="3">LzTr (LzTr)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr>
+<tr><td colspan="3">ABTorrents (ABT)<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">ABTorrents (ABT)<br>No invite forum.</td></tr><tr class="spacer"></tr>
+<tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr><tr class="spacer"></tr>
 </table>
 </body>
 </html>
