--- a/index.html
+++ b/index.html
@@ -100,10 +100,14 @@
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>U2</td><td>14&nbsp;days</td><td>Content to contribute.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>UHDB</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">Anthelion (ANT)<br>Invite forum unlocks with Power User user class: 1TB upload, 1.0 ratio, 5 torrents uploaded or 10 torrents adopted, 25000 Orbs.</td></tr>
-<tr><th scope="row">ANT<span class="arrow">-&gt;</span>NBL</td><td>14&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">ANT<span class="arrow">-&gt;</span>BLU</td><td>14&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">ANT<span class="arrow">-&gt;</span>CRT</td><td>14&nbsp;days</td><td>No data yet.</td></tr>
+<tr><td colspan="3">Anthelion (ANT)<br>Invite forum unlocks with Power User user class: 1TB upload, 1.0 ratio, 5 torrents uploaded or 10 torrents adopted, 25000 Orbs.<br><br>Fanatic user class: 2TB upload, 1.5 ratio, 25 uploads and/or 50 adoptions (minimum 5 uploads), 3 months account age, 100000 Orbs.</td></tr>
+<tr><th scope="row">ANT<span class="arrow">-&gt;</span>Aither</td><td>120&nbsp;days</td><td>4 months old account.</td></tr>
+<tr><th scope="row">ANT<span class="arrow">-&gt;</span>BBT</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">ANT<span class="arrow">-&gt;</span>BLU</td><td>120&nbsp;days</td><td>4 months account age.</td></tr>
+<tr><th scope="row">ANT<span class="arrow">-&gt;</span>CRT</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
+<tr><th scope="row">ANT<span class="arrow">-&gt;</span>CZ</td><td>180&nbsp;days</td><td>Fanatic user class. 50 uploaded torrents, or 75 adopted torrents. 6 months account age.</td></tr>
+<tr><th scope="row">ANT<span class="arrow">-&gt;</span>NBL</td><td>180&nbsp;days</td><td>Fanatic user class. 6 months account age.</td></tr>
+<tr><th scope="row">ANT<span class="arrow">-&gt;</span>SM</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">AlphaRatio (AR)<br>Invite forum unlocks with Sphinx user class: 3.2TB upload, 1.44 million seed bonus points, no Hit and Runs, 26 weeks account age.<br><br>Satyr user class: 12TB upload, 2.4 million seed bonus points, no Hit and Runs, 60 weeks account age.<br>Adonis user class: 12TB upload, 2.0 million seed bonus points, no Hit and Runs, 60 weeks account age, 50USD or greater donation.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>CRT</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -331,7 +335,6 @@
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>PTN</td><td>56&nbsp;days</td><td>Other tracker profiles.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>PxC</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>PB</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
-<tr><th scope="row">MTV<span class="arrow">-&gt;</span>RED</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>THD</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>UHDB</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
@@ -518,11 +521,11 @@
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>SpeedApp</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>THD</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">LzTr (LzTr)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">ABTorrents (ABT)<br>No invite forum.</td></tr>
-<tr class="spacer"></tr>
-<tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr><tr class="spacer"></tr>
+<tr><td colspan="3">ABTorrents (ABT)<br>No invite forum.</td></tr><tr class="spacer"></tr>
 </table>
 </body>
 </html>
